# nyc_data_pipiline_with_dagster

./: README.md
dagster_project/: README.md  pyproject.toml  workspace.yaml  workspace.yml
dagster_project/.tmp_dagster_home_796406c6/history/: runs.db
dagster_project/.tmp_dagster_home_796406c6/history/runs/: 0bd7d16e-4686-4052-a3a3-f8a715dc3cd1.db  index.db
dagster_project/.tmp_dagster_home_796406c6/schedules/: schedules.db
dagster_project/.tmp_dagster_home_796406c6/storage/0bd7d16e-4686-4052-a3a3-f8a715dc3cd1/extract/: result
dagster_project/.tmp_dagster_home_796406c6/storage/0bd7d16e-4686-4052-a3a3-f8a715dc3cd1/load/: result
dagster_project/.tmp_dagster_home_796406c6/storage/0bd7d16e-4686-4052-a3a3-f8a715dc3cd1/transform/: result
dagster_project/src/dagster_project/: __init__.py
dagster_project/src/dagster_project/job/: pipeline.py
dagster_project/src/dagster_project/scripts/: extract.py  load.py  transform.py
